Refactor article management example to enhance clarity and structure in OOP introduction

--- a/oop-intro.ipynb
+++ b/oop-intro.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10f69d92",
+   "id": "2bc8279f",
    "metadata": {},
    "source": [
-    "Eintwurf einer Datenstruktur für einen Artikel.<br>\n",
-    "Jeder Artikel hat\n",
-    "- eine Artikelbezeichnung\n",
-    "- einen Artikelbestand\n",
-    "- einen Artikeleinzelpreis"
+    "### Einführung in die objektorientierte Programmierung (OOP)\n",
+    "\n",
+    "Auszug aus [python-kurs.eu](https://www.python-kurs.eu/klassen.php):\n",
+    "\n",
+    "- Das Grundkonzept der objektorientierten Programmierung besteht darin, Daten und deren Funktionen (Methoden), - d.h. Funktionen, die auf diese Daten angewendet werden können - in einem Objekt zusammenzufassen und nach außen zu kapseln, so dass Methoden fremder Objekte diese Daten nicht direkt manipulieren können.\n",
+    "- Objekte werden über Klassen definiert.\n",
+    "- Eine Klasse ist eine formale Beschreibung, wie ein Objekt beschaffen ist, d.h. welche Attribute und welche Methoden sie hat.\n",
+    "- Eine Klasse darf nicht mit einem Objekt verwechselt werden. Statt Objekt spricht man auch von einer Instanz einer Klasse."
    ]
   },
   {
@@ -17,12 +20,19 @@
    "id": "89a39b0a",
    "metadata": {},
    "source": [
-    "### Prozeduraler Ansatz"
+    "### herkömmlicher (prozeduraler) Ansatz\n",
+    "\n",
+    "Für eine Artikelverwaltung wird eine geeignete Datenstruktur benötigt, so dass ...\n",
+    "- die Artikelbezeichnung, \n",
+    "- der Artikelbestand\n",
+    "- und der Artikeleinzelpreis\n",
+    "\n",
+    "... hinterlegt werden können."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "0e1fecc2",
    "metadata": {},
    "outputs": [],
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "9a272c1d",
    "metadata": {},
    "outputs": [
@@ -42,7 +52,7 @@
        "10"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,25 +62,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f637fe85",
+   "metadata": {},
+   "source": [
+    "Weiterhin soll die Möglichkeit bestehen, einzelne Artikel auszudrucken und den Artikelbestand über eine Ausbuchung zu verringern.<br>\n",
+    "Bei der Ausgabe soll auch der Gesamtpreis angeteigt werden.<br>\n",
+    "Der Artikelbestand darf nicht negativ werden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0c510e7d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def artikel_drucken(artikel):\n",
+    "def artikel_drucken(artikel:dict) -> None:\n",
     "    gp = artikel[\"einzelpreis\"] * artikel[\"bestand\"]\n",
     "    print(f\"Artikel {artikel['bezeichnung']}, Bestand {artikel['bestand']}, EP {artikel['einzelpreis']:.2f} €, GP {gp:.2f} €\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2f997890",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def artikel_ausbuchen(artikel, menge):\n",
+    "def artikel_ausbuchen(artikel:dict, menge:int) -> None:\n",
     "    if artikel[\"bestand\"] - menge < 0:\n",
     "        print(\"Buchung kann nicht ausgeführt werden, Artikelmenge nicht ausreichend.\")\n",
     "    else:\n",
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "b2c1ae6e",
    "metadata": {},
    "outputs": [
@@ -87,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artikel B1, Bestand 10, EP 10.00 €\n"
+      "Artikel B1, Bestand 10, EP 10.00 €, GP 100.00 €\n"
      ]
     }
    ],
@@ -97,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "e42ce90e",
    "metadata": {},
    "outputs": [
@@ -106,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "Buchung kann nicht ausgeführt werden, Artikelmenge nicht ausreichend.\n",
-      "Artikel B1, Bestand 1, EP 10.00 €\n"
+      "Artikel B1, Bestand 1, EP 10.00 €, GP 10.00 €\n"
      ]
     }
    ],
@@ -131,16 +151,16 @@
    "outputs": [],
    "source": [
     "class Artikel:\n",
-    "  def __init__(self, bezeichnung:str, bestand:int, einzelpreis:float):\n",
+    "  def __init__(self, bezeichnung:str, bestand:int, einzelpreis:float) -> None:\n",
     "    self.bezeichnung = bezeichnung\n",
     "    self.bestand = bestand\n",
     "    self.einzelpreis = einzelpreis\n",
     "\n",
-    "  def drucken(self):\n",
+    "  def drucken(self) -> None:\n",
     "    gp = self.einzelpreis * self.bestand\n",
     "    print(f\"Artikel {self.bezeichnung}, Bestand {self.bestand}, EP {self.einzelpreis:.2f} €, GP {gp:.2f} €\")\n",
     "\n",
-    "  def ausbuchen(self, menge:int):\n",
+    "  def ausbuchen(self, menge:int) -> None:\n",
     "    if self.bestand - menge < 0:\n",
     "      print(\"Buchung kann nicht ausgeführt werden, Artikelmenge nicht ausreichend.\")\n",
     "    else:\n",
@@ -149,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "88f76817",
    "metadata": {},
    "outputs": [],
@@ -159,7 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
+   "id": "6eb3baff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Artikel"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "adbede9a",
    "metadata": {},
    "outputs": [
@@ -169,7 +210,7 @@
        "10"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "a66ca3ed",
    "metadata": {},
    "outputs": [
@@ -188,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artikel A1, Bestand 10, EP 10.00 €\n"
+      "Artikel A1, Bestand 10, EP 10.00 €, GP 100.00 €\n"
      ]
     }
    ],
@@ -198,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "be2d0135",
    "metadata": {},
    "outputs": [
@@ -206,7 +247,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artikel A1, Bestand 7, EP 10.00 €, Gesamtpreis 70.00 €\n"
+      "Buchung kann nicht ausgeführt werden, Artikelmenge nicht ausreichend.\n",
+      "Artikel A1, Bestand 1, EP 10.00 €, GP 10.00 €\n"
      ]
     }
    ],
@@ -216,25 +258,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "196d416e",
+   "metadata": {},
+   "source": [
+    "### Vererbung\n",
+    "\n",
+    "Mittels Vererbung können Klassen auf vorhandenen Klassen aufbauen.<br>\n",
+    "Auf diese Weise kann eine durch Vererbung erstellte Klasse die Attribute und Methoden der übergeordneten Klasse erben und weiterverwenden.\n",
+    "\n",
+    "Die Klasse, von der eine Klasse erbt, wird als übergeordnete Klasse oder Oberklasse bezeichnet.<br>\n",
+    "Eine Klasse, die von einer Oberklasse erbt, wird als Unterklasse bezeichnet."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "98307037",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ArtikelMitVerfallsdatum(Artikel):\n",
-    "  def __init__(self, bezeichnung:str, bestand:int, einzelpreis:float, verfallsdatum:str):\n",
+    "  def __init__(self, bezeichnung:str, bestand:int, einzelpreis:float, verfallsdatum:str) -> None:\n",
     "    super().__init__(bezeichnung, bestand, einzelpreis)\n",
     "    self.verfallsdatum = verfallsdatum\n",
     "\n",
-    "  def drucken(self):\n",
+    "  def drucken(self) -> None:\n",
     "    gp = self.einzelpreis * self.bestand\n",
     "    print(f\"Artikel {self.bezeichnung}, Bestand {self.bestand}, EP {self.einzelpreis:.2f} €, GP {gp:.2f} €, Verfallsdatum {self.verfallsdatum}\")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "021e71b6",
    "metadata": {},
    "outputs": [],
@@ -244,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "2b5b8194",
    "metadata": {},
    "outputs": [
@@ -252,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artikel AMF, Bestand 1, EP 10.00 €, GP 10.00 €, Verfallsdatum 31.12.2026\n"
+      "Artikel AMF, Bestand 7, EP 10.00 €, GP 70.00 €, Verfallsdatum 31.12.2026\n"
      ]
     }
    ],
@@ -264,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv311_260226 (3.11.14)",
+   "display_name": "venv311_260226",
    "language": "python",
    "name": "python3"
   },
